# rinf

./: Cargo.toml  LICENSE  Makefile  README.md
crates/rinf-datasets/: Cargo.toml  README.md
crates/rinf-datasets/src/: lib.rs
crates/rinf-tokenizer/: Cargo.toml  README.md
