[workspace.package]
version = "0.0.0"
edition = "2021"
description = "Autonomous AI agent"
authors = ["urb"]
license = "MIT"
repository = "https://github.com/0xurb/rinf"
publish = false

[workspace]
members = ["crates/rinf-datasets", "crates/rinf-tokenizer"]
# default-members = ["bin/*"]
exclude = [".github/", "**/tests/"]

resolver = "2"

[workspace.dependencies]
rinf-tokenizer = { path = "crates/rinf-tokenizer" }
